--- a/index.ipynb
+++ b/index.ipynb
@@ -1005,7 +1005,8 @@
     "x_values = [cities[i]['City'] for range(0,3)]\n",
     "\n",
     "city_indices = None\n",
-    "city_indices # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
+    "city_indices # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n",
+    "x_values"
    ]
   },
   {
