--- a/index.ipynb
+++ b/index.ipynb
@@ -1015,7 +1015,7 @@
    "source": [
     "x_values = [cities[i]['City'] for i in range(0,3)]\n",
     "\n",
-    "city_indices = None\n",
+    "city_indices = for r in range()\n",
     "city_indices # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n",
     "x_values"
    ]
