Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1015,7 +1015,8 @@
    "source": [
     "x_values = [cities[i]['City'] for i in range(0,3)]\n",
     "\n",
-    "city_indices = for r in range(1,12):\n",
+    "city_indices\n",
+    "    for r in range(1,12):\n",
     "    \n",
     "city_indices \n",
     "x_values"
