Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1017,7 +1017,7 @@
     "\n",
     "city_indices = []\n",
     "    for r in range(1,12):\n",
-    "        city_\n",
+    "        city_indices.append()\n",
     "    \n",
     "city_indices \n",
     "x_values"
