--- a/index.ipynb
+++ b/index.ipynb
@@ -998,24 +998,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-5-5047c3903b5b>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-5047c3903b5b>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for r in range(1,12):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['Buenos Aires', 'Toronto', 'Marakesh']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "x_values = [cities[i]['City'] for i in range(0,3)]\n",
     "\n",
     "city_indices = []\n",
-    "    for r in range(1,12):\n",
-    "        city_indices.append(r)\n",
+    "for r in range(1,12):\n",
+    "    city_indices.append(r)\n",
     "    \n",
     "city_indices \n",
     "x_values"
