--- a/index.ipynb
+++ b/index.ipynb
@@ -1064,7 +1064,8 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
-    "# write a for loop that adds the properly formatted string to the names_and_ranks list\n"
+    "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
+    "\n"
    ]
   },
   {
