--- a/index.ipynb
+++ b/index.ipynb
@@ -1065,7 +1065,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
-    "for i in ran\n"
+    "for i in range(len())\n"
    ]
   },
   {
