--- a/index.ipynb
+++ b/index.ipynb
@@ -1066,7 +1066,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for i in range(len(city_names)):\n",
-    "    names_and_rankes.append(city_indices[i]+'. '+)\n"
+    "    names_and_rankes.append(city_indices[i]+'. '+city_names[1])\n"
    ]
   },
   {
