--- a/index.ipynb
+++ b/index.ipynb
@@ -1078,7 +1078,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for i in range(len(city_names)):\n",
-    "    names_and_ranks.append(city_indices[i]+'. '+city_names[1])\n"
+    "    names_and_ranks.append(scity_indices[i]+'. '+city_names[1])\n"
    ]
   },
   {
