Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1093,7 +1093,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []\n"
+    "city_populations = []\n",
+    "len(city)"
    ]
   },
   {
