--- a/index.ipynb
+++ b/index.ipynb
@@ -1089,12 +1089,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_populations = []\n",
-    "len(city)"
+    "len(city_names)"
    ]
   },
   {
