--- a/index.ipynb
+++ b/index.ipynb
@@ -1059,13 +1059,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
-    "for i in range(len(city_in)):\n",
+    "for i in range(len(city_indices)):\n",
     "    names_and_ranks.append(str(city_indices[i])+'. '+city_names[i])\n"
    ]
   },
