Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1104,8 +1104,7 @@
     }
    ],
    "source": [
-    "city_populations = []\n",
-    "len(city_names)"
+    "city_populations = []\n"
    ]
   },
   {
