--- a/index.ipynb
+++ b/index.ipynb
@@ -1105,7 +1105,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for i in range(city_)"
+    "for i in range(city_names)"
    ]
   },
   {
