--- a/index.ipynb
+++ b/index.ipynb
@@ -1105,7 +1105,8 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for i in range(len(city_names)"
+    "for i in range(len(city_names)):\n",
+    "    "
    ]
   },
   {
