--- a/index.ipynb
+++ b/index.ipynb
@@ -1106,7 +1106,7 @@
    "source": [
     "city_populations = []\n",
     "for i in range(len(city_names)):\n",
-    "    "
+    "    print()"
    ]
   },
   {
