Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1089,31 +1089,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-20-2c4a5ce0019d>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-2c4a5ce0019d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for i in range(len(city_names)-1:\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "city_populations = []\n",
-    "for i in range(len(city_names)):\n",
+    "for i in range(len(city_names)-1:\n",
     "    print(i)"
    ]
   },
