--- a/index.ipynb
+++ b/index.ipynb
@@ -1103,7 +1103,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for i in range(len(city_names)-1:\n",
+    "for i in range(len(city_names)):\n",
     "    print(i)"
    ]
   },
