--- a/index.ipynb
+++ b/index.ipynb
@@ -1113,7 +1113,7 @@
    "source": [
     "city_populations = []\n",
     "for i in range(len(city_names)-1):\n",
-    "    city_populations.append(cit)"
+    "    city_populations.append(cities)"
    ]
   },
   {
