--- a/index.ipynb
+++ b/index.ipynb
@@ -1107,7 +1107,7 @@
    "source": [
     "city_populations = []\n",
     "for i in range(len(city_names)-1):\n",
-    "    city_populations.append(cities[i][population])"
+    "    city_populations.append(cities[i][Population])"
    ]
   },
   {
