Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1095,7 +1095,8 @@
    "source": [
     "city_populations = []\n",
     "for i in range(len(city_names)-1):\n",
-    "    city_populations.append(cities[i]['Population'])"
+    "    city_populations.append(cities[i]['Population'])\n",
+    "    print"
    ]
   },
   {
