Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1096,7 +1096,7 @@
     "city_populations = []\n",
     "for i in range(len(city_names)-1):\n",
     "    city_populations.append(cities[i]['Population'])\n",
-    "    print"
+    "    print(city_population)"
    ]
   },
   {
