--- a/index.ipynb
+++ b/index.ipynb
@@ -1089,14 +1089,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2891]\n",
+      "[2891, 2732]\n",
+      "[2891, 2732, 929]\n",
+      "[2891, 2732, 929, 559]\n",
+      "[2891, 2732, 929, 559, 288]\n",
+      "[2891, 2732, 929, 559, 288, 93]\n",
+      "[2891, 2732, 929, 559, 288, 93, 60]\n",
+      "[2891, 2732, 929, 559, 288, 93, 60, 44]\n",
+      "[2891, 2732, 929, 559, 288, 93, 60, 44, 33]\n",
+      "[2891, 2732, 929, 559, 288, 93, 60, 44, 33, 3]\n",
+      "[2891, 2732, 929, 559, 288, 93, 60, 44, 33, 3, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "city_populations = []\n",
     "for i in range(len(city_names)-1):\n",
     "    city_populations.append(cities[i]['Population'])\n",
-    "    print(city_population)"
+    "    print(city_populations)"
    ]
   },
   {
