--- a/index.ipynb
+++ b/index.ipynb
@@ -1112,7 +1112,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for i in range(len(city_names)-1):\n",
+    "for i in range(len(city_names)):\n",
     "    city_populations.append(cities[i]['Population'])\n",
     "    print(city_populations)"
    ]
