--- a/index.ipynb
+++ b/index.ipynb
@@ -1086,7 +1086,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
-    "for i in range(len(city_indices)):\n",
+    "for i in range(len(city_names)):\n",
     "    names_and_ranks.append(str(city_indices[i])+'. '+city_names[i])\n",
     "names_and_ranks"
    ]
