Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1075,10 +1075,11 @@
        " '8. Pyeongchang',\n",
        " '9. Walla Walla Valley',\n",
        " '10. Salina Island',\n",
-       " '11. Solta']"
+       " '11. Solta',\n",
+       " '12. Iguazu Falls']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
