Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2139,7 +2139,7 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for a in range()"
+    "for a in range(len(cities))"
    ]
   },
   {
