Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2140,7 +2140,7 @@
    "source": [
     "city_areas = []\n",
     "for a in range(len(cities)):\n",
-    "    city_area.append(city)"
+    "    city_area.append(city_names[])"
    ]
   },
   {
