Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2141,7 +2141,7 @@
     "city_areas = []\n",
     "for a in range(len(cities)):\n",
     "    city_area.append(city_names[a]['Area'])\n",
-    "ci"
+    "city_areas"
    ]
   },
   {
