Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2151,7 +2151,7 @@
    ],
    "source": [
     "city_areas = []\n",
-    "for a in range(len(cities)):\n",
+    "for a in range(len(city_names)):\n",
     "    city_areas.append(city_names[a]['Area'])\n",
     "city_areas"
    ]
