--- a/index.ipynb
+++ b/index.ipynb
@@ -2152,7 +2152,7 @@
    "source": [
     "city_areas = []\n",
     "for a in range(len(city_names)):\n",
-    "    city_areas.append(city_names[a]['Area'])\n",
+    "    city_areas.append(cities[a]['Area'])\n",
     "city_areas"
    ]
   },
