Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2149,10 +2149,10 @@
     }
    ],
    "source": [
-    "_areascity_areas = []\n",
+    "city_areas = []\n",
     "for a in range(len(cities)):\n",
     "    city_areas.append(cities[a]['Area'])\n",
-    "city"
+    "cities[]"
    ]
   },
   {
